--- a/MiniProyecto/MiniProyecto/interfaz.resx
+++ b/MiniProyecto/MiniProyecto/interfaz.resx
@@ -117,4 +117,142 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="RegImage.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAE+ElEQVR4Xu2bV6gdVRSGE4xG7AaTiBoV
+        TBA1iL2BJKJYwQrGFhTUCOqTLxJREBuWgAULKliCKLG8iIokYldsoCCBWBBRUaMYfbDF9smv/97ss3LP
+        zb1nZi4n58wHA3vWXnvtWf/UvWdm0iQDzASWAJ8Aaxk8lNPHwC3AjJR3Sv5g4LvYYoBZDRxU7vmU/JvA
+        PGDzDoUGAOXk3JSj+BaYrgod9uINYKPYcNBQjoUIN8mg80LMi86DCnCoc/5IK+mCN3CHfTeATZzzWq38
+        R3RKAKcBl/fBck7ctgiwe2hzavRJ5LxHEwDYGPgr+fQBM+M2lgBLg/+fyiH6ieQwqgBCKgI39sGyMG5b
+        BJgNXFO0qXYEDDKtAK0ArQCdAgwrrQC5MGS0ArQCtAK0ArQCtAK0AkysAMCmwAnAPcDzwIdeVL4bOF4+
+        sV0TTKgAwGbAFcBPqb9R+BFYrDYxTp2kzhoXANgf+CKnB287waOBuV6OsUDvFH6fA/vFeHWROmlUAOBk
+        4Bd38RZwePSJeO7+XbdR25OiTx3kvHOhZrznU/L3dpubGwlgCnCH2/6mN1fRpyo571yoEWBr4GuHvi3W
+        jxXgTsf4Ctgq1lch550LNQLc4LAvx7dN3rsXAK/5oqjlFeC8Lr6vO9Z1ZV1Vct65UBPANB/6fwP7hjod
+        GRKlGy8AW4Y2BwL/OOa2ZV0VUodNCLDQIZ8boe5p130PnAtso6S892UTT47Qbrnr1vtyZKw4XiMCPO6Q
+        Fwb7fNt/BuaUda6f4zpxWKi72PZlpb0KjteIAB845NxgT1f160t7CXCtfZYE+z62v1/aq+B4jQiQvjWY
+        Fuzp8D+ltJcAJ9rnqWCfYfvq0l4Fx2tEAD3Kii2C/THbF5X2EuB8+ywNdl0rxJrSXgXHa0SAlQ65W7Bf
+        artua5PLOtdPBl61z0WhTm99xcrSXgXHa0SAZx1yQbDrFpiu9LeXIjj5W12n73firfBs1z1T2qvgeI0I
+        kPZ0PIwlgB54EkcUdXr+T7wUn/qAR113SWmvQuqsCQFm+SHod2AH2/YGPnNXst9fDnc9XL7PdeLTdBdx
+        vD/8ncKssq8q5LxzoUaAhxz2EWB74Euv6/F31+ifUF1xHdBwWFf/ZV5/IPpXwTEbE2DnYiSY9vyKscz2
+        AFOLJ7/UVg9IO0XfKjhufQI46R2L9QV+hhe6NXZ+nTkKwHbAD26rGKdHn6rkvHOhRzxYecLnvYbA5dVd
+        szxJhIeVWGfrdXHyD7qN2i6OPnWQ886FcQIcBbyY2hd0jNh8C9OkhtBpoQnR40o/D4iOBe4qxgO/AmeW
+        seokbWxPAuh8LPZsZI8R/DXQ0VES20iYJE5CPhpQzY5x6iR11qsA+txUX11fBryXN/1/5kf/BLAXcJUn
+        RsuPs1XWnOGVwJ6xXROkjnsSIOGPKFMCmtsXZ0S/bviKPzXaJ4Kcdy6ME298uk0tAq52+azo24/kvHNh
+        nAC7+MqvU0CnhN76HBnn9fqVygIIna8aqkb7hkAtAmzItAK0ArQC1C+AZ3b0zK87QxOLhtnrTKf1QlMC
+        6FeUNCnaBGvUR+y3F1LAWgUQnsTQm+EmljEPqddHKcDQ/zQ1zL/NrdKKRnVCPxNOic6Dhl+5d/w4qXNW
+        c/FJhEPqutD0Ez7stedT8t/kGSr9SOx/aYcFJX9AVGg6cLN+Jx3g3+dX6bAv5yb/BV+I4bBRFXTxAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAMm0lEQVR4Xu1bB5CNSxY+cqZkRs7xWTus
+        TJmRxsiMtLJFSWMw4q7HvuJR9RZLKVVYxmDkzCQl511WKEpeJVMYORucra/39l/99x/uvfPMLFXvqzo1
+        U393n+5zuvv0Oaf7Ev2GVMWfiegEEf3bC6HOOL3x946KRMR+0BciKqUz+Z4xRArXsWNH7tq1qy21b99e
+        VUJfncn3jNUQqnjx4uyGL1++cKFChaQC/qEz+RaRlYi6EVE5vUDDHQjVq1cvXWYLOnfuLBVwVWeioTIR
+        hRFRJr0grZCdiPZ5BvuRiOYTUU69kkc5QqglS5bo8lowb948dRsE6MyIKAcR/ZWIPnjqJHomIk2BQRxQ
+        BirpFhF1UuqVIKLlsvzKlSu6vBacOXNG5bdIU0JPIrpv028sEWVR6qUqTMJ36NCBg4KC9AElENFWIvok
+        v5UoUUKX1RafP3/mAgUKqLywujYoq01Q69atuVWrVmmuBAi/X3YaFhbGycnJYuBr1qzhgIAAXRGcPn16
+        btq0KR8+fFiX1RG7d+/mRo0acbp06Sz8SpUqxVu2bBH13r17JxSRVkqwCP/x40fTwF+8eMFjxozhjBkz
+        cs6cOTkyMpJv3bplquMPrl+/zuHh4ZwtWzbOnDkzT548md+8eWOqAyWEhISkuhJg8Azhu3TpYhFexaNH
+        j/jVq1f65xQDik1KStI/G7BRws6vqQRYWGP/4ZhyE94NUMquXbt49uzZPGLECO7fvz8PGDCAR44cyXPm
+        zOG9e/daZthXOCghoy5MSvBHyRSemr/Cw6ht2rSJ27Rpw5kyZVIHaEtZsmQRhjUuLk5n5RVQQrNmzVR+
+        obowKUEVIkoGQxgcf7B9+3auVKmSRUgQ9nW5cuW4bNmy4n+9HNSwYUM+ePCgztYR8CQbNGgg278jopK6
+        MCnFXDkoaYHd8Pz5c+Hbq8LAxR08eDDv3LmTnz17pjcR37Zt28aDBg3Sj0EePnw4f/jwQW9iwbJly9R2
+        U3Uhfg1yE9E9MC5ZsqTrPr1x4wZXrFjRGEi+fPnEnsfy9BWvX7/mmTNnct68eU2r4f79+3pVAzCSiuKu
+        pYZ3CC9MdIDjyA4QvlixYsagsZftZlvixIkTfOrUKf2zgcePH3OLFi0MfpUrV+YnT57o1QSGDBmizn4r
+        ffBfC+I0wJn89OlT0wCw7NWZnzRpkjCATrh27ZpwkuAz3Lx5Uy828OnTJx43bpzBt0mTJvz+/XtTHbQH
+        L0+dTfqgvya2o5NcuXKJZaqiW7duJuG9AcZN1j9+/LhebAHsgKyPY1MFVkXWrFllOULvVEFp6duPHz/e
+        NIAdO3YYg8Oyd5t5CX8VgJUg3d4MGTKIoEnF0KFDJT9EiYX1wf9alCeiFegAS+3OnTtGxxBWHnUwePrW
+        cIK/CgBu377NOXLkEG0aN24sjj2Jy5cvG/yIaDERldGF8AfI4SGNheV0V2HMzZs3Nw1q8+bNRhmsva9I
+        iQKAGTNmGO32799vKqtbt66qBNBtIlpJRIM8k+gTkL3VGQnCEXj06FFTp/DwUIZz3p+jLqUKePnyJWfP
+        nl206927t6kMrrRdROohJFrH6sLa4YhshCMNnSCTY5fMgG8v3Vs4Of4ACsiQLRtnyJrVLwUA3bt3F33C
+        T7BzzS9evMiLFi3inj176grZqwtrB6GA0NBQna8FCGwk89jYWL3YEWeSkrhXXAIH7YgV1Dchkc8/8c12
+        AIgtZL9ufoQEtq3fCkDg4w2I4ORA3BweFWeTkrhlXLwhvKSWsfF8wUcDevXqVaNfuL/eoESJX1cBSFag
+        Lvakrxh15JhFeEnhR8z2xQnIQsEZQ9/Tpk3Tiy1INQUgnkddRHW+4E1yMreJT7QILil4Ryx/cPEhsLeX
+        Ll0qAiaEzeg7d+7cXLVqVZFCw3eUwyVX8U0poF1CIgfvjLMILxSwM44/agqAoYVBCwwMNJa9N0IuEQpZ
+        sWKFcKBSTQFyC8A58RUDExI5RDGAKkUcPWbUg5OzatUqLlKkiEVAOF7ITCEAQpyAvziOcUzb1UXOIVUU
+        MHfuXKMjBEPekJCQwEVq/p5Dd8QKJagrITQ+kS8/+x+Phw8fWlLttWrVEkYXiVI3nD17ln/66ScuX768
+        RRl+KQDLxhv27NljMEf2xw0QXgYsAYGBPCRxl9gObRN28fjj/zSExz5XZowrVKjAGzduNLm9vgD+wcKF
+        C7lw4cKqAuAZ2t02mXBYNkBjZHYWLFjA58+ftwwCiRFpjGCAnKAKjxMDHhsAg6fueQiPeEL2P2zYMFtH
+        xx9gZUpv1UNIlrgqAY8T4DaqjQRhP+o5OkR/KCtYsKAlRAachNeBZS9nHjkCzN7XAgwhIlhFFjzEQKrf
+        EXic0I+IoojouqoE7E0VyN7KslmzZpnKsB/lCoHw+/btM5VLYGWpe96b8Lg5guFDArRKlSoiMsQlzMmT
+        J/WqJowaNUpVAiJGn4FLzmVoiHBYz+AgX4cy+OZIY0lI5bgJD8Day4Fh2TsBBhDHmzohOuHSxiltBgdK
+        SbFhlTfTBXUDlCDS46NHjzYxPnDggDEAdIAlJ4HZsgukJHDOy6MOBs9pz587d86ULYZSawUGclDTplyj
+        Rg3TnQP4PHjwQGchgFsrOE+euqeJKL0uqBs2y84RlqpQMjLibPYVcHJkO1h7O+BqrHTp0qIOnJywLl14
+        ZXQ0r1+71qClS5YIZUheWJVOmanp06cb9YionS6kG3COCj9cXeoA8vb169c3GCOHp64EJ0gPD+e8fspI
+        TJkyxeA7ZPBgk+A6tWvb1qgbExOjsxKAsVae4uAKzScYafGJEyfqPAXu3btnuglCDk9Nn+m4cOGCURdO
+        jh0wi3KL1PjhB4vAOq1dvZqLeM5+GEcnKGl05BBz6cLqwMWIeJkBd9PuuJPABYVqqOAmI42lbxkAgYus
+        5+Thwf+QdSLCwy0C67Rx/Xru7slQI3n69u1bnaVAfHy8wdeXbfB3WdmXqzGkxrAFMADZDvd/PXr0EMkM
+        xPOwyHCeUIZV4wT4EZLH3375xSKwTps2bODxkZFeFYu7BRlSe7tGqyqtvy9ZIhWnT582jkidYLWlj9Cp
+        Uye9qQEkPmWbWTNnWgTWafPGjTwmIsJog23pBPgQnnoxutAqjL3frl07x2PKCTBsSKRiReTPn9+iCBBO
+        ECfghYms96eBAy0Cq4TlDwW0CQ0V9XFaOZ0EgOJ8xetCq8BLi91yEHjp6a8SJNAO94FIsk6dOlU8owHP
+        iIgIvaoJNWvWFPWKBQTwmpgYi+CgDevWCeGXR0UZdwe4rXKD8r7ooC60jmz+KOHu3bs+5QjlEuzbt69e
+        ZIJ67R0cFMTr1qyxnXkoB04R6sFfOHTokM7KBOUewXUFSHhVAoTGvR2MH4wensG4eYHytPD28ALbKDg4
+        2FBC9erV+efp0w3BMft/mTxZvCCTddxcaokyZcrI+tG6sE6wVQIGGB0drToXJoKm7aJAeQoULVpUL7IA
+        YW29evVMfHPmyCF8BGlMJWHpy+d7TkC8oNwoT9YFdYNJCTgZbCw9bpHXKc9Zhf+gQ/UDcLfnBJRhZeXJ
+        k0fvx5bQFx5Y6N6qiq1bt6ptgnUhvcGkBIX+Q0RtlHpFPK++RTneBKhA9lY+hsSAdSAGQOCF/IDaD2Yc
+        idg6deoI9/sPtWtzqZIlTX4HCNEpYg27k6BPnz6y3uuUviZRlYAHSdMcGBk/lrC7xJCrB7Omxg6XLl0y
+        5fXgN+BxxI9TptieBLADq1et4sixY/l3HkMoCek9NWeJ5IuybVx9AG/ITEQdfHiN9QCd9evXzxiEBFLX
+        cqBRUVHi27Fjx0zLvXbt2rxg/nyL0HYETxCGceaMGUYECcKJI98YTZgwQVVQY32wqYH16AxWVwdmXQZQ
+        iPdxUSrjfhip/v36WYT0RlIJ+L+l8sYI/gSUq+QO8OQnTTBCDgLHGS4rVVJnSu5j2IbwESMswvlKUgmg
+        zp06GfwVewL3voY+0NRCNWXJ+URdw8IsQvlLUgGgJo0b633gRxdpiokeo+lGyNuLAbYOCbE1dv6QdI9j
+        Vq4UJ4YiPH5lkkEf4LcA5OuRtxcDrV6tGi9ZvNgimD8E44kfayjC/8uXBMj/E1AC8vZiwHCpkeBYsXy5
+        RTg3guJCWrXSfQjMvN3vmr454NICeXvjggaZ3ObNmvGkiRPFktYFBkVHRfHoiAhu1LCh+m4QBIOHPf9N
+        Lns3IG+P1LUqjJhVvF9CUASnB+8DcI2n+PYq4ahLM2ufGkDevq0ne2vEFl4I7i08vDRxctIS2L/tiehH
+        j4D4dRpS9Yjn8fM8RHUIbOxc8t/gDf8F2tkEhr7RkZcAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAEW0lEQVR4Xu2bO8gdRRTHE3wE3yAqChFU
+        fEAULWIlsbOxEMEHNqKdjaCVmsJCtEhibAQVRLEQBBGrKCjY+ATFR2cj2KhREBRFFN8/OcuZm/P9v53Z
+        u97Z2fsl+cEHd//nzJwzc2dn5s7ut23bceoDnAwcAL5lOg4D+y2Wxp8dT6wV+zX+7Pi3Y1yntloAezzG
+        YbXNTvpqVK9Nqzij0cTSdS203kXgdUETW2ReCa13EXhdaJVYqzijaZVYqzijaZVYqzijaZVYqzijaZVY
+        qzijaZVYigP8BHwO3Kw+s5DrgJBwr10Z8lc78C9wrfo1J2WT03N2Zcg/mM4HDvrnl9WvOSmrZfUhcuWi
+        Dlzsl/P/Nlgm4THkykUd2OWX36tfc3IJK8kv+vZpOYLrC8Av/vkp9ZscvwefAE7w6w71U5JP9O3TcqQ4
+        gZeA09RvcoBnPIGH/bpD/ZQjea88Ah4FLlN7E4BTfB02drnWob61aRWnCHCH5/Fh0Jok1ipOEeB1z+Pe
+        oC2VWPKLvulzqXw4dI20PyQFzgX+9L9zgt6x0XszyUd99VoZOHRtd0gK3OdBD4neEbU+juQ8egRsOnSd
+        5ZAU+NiD3i56R9RK+hBaTq+H9EkALvd4P9tKILbeRHL6EFoujIA9QbvetTYjAHjMAz7XY+vI6Tm7kvMP
+        P3z6eHxjLRMBfOoBb+ixdeT0nF3J+Q90wMGNtUxE2Huf0WPrUL0WazEJlhpZstUgV39On4RSsJKtBusy
+        CWYbWbLVYGAOaDYJdqhulGw1GOiAZpNgh+pGyVaD45Ngpv6cPgmlYCVbDbbcJJiuVyXUV/o1uG+RyJSk
+        aKobaluktiKhPjsP0E5oex6QoqpulGw1aRWnl1Lwkk0BPkj+gffUr4/krHoTSsFLNsUam/wD76pfH8lZ
+        9SaUgvfN0rVpPusrAx2gE9SUtJn1lRRddSPM0mkkTEHbWV9JWah+TADsPGY7ANgOfLMYiHATsEP9auLP
+        H65QfRaAa0LjE78CrwH32JNiLbMqwLPAP8CDamsOsNcbfQh4BPhMOuNvX9sfqPGt2Ts/XucfwKVqbw7w
+        jjf01qCdB9zlo+B36ZAvgSft9Bg4aWNtZYCLwj9dHFB7c4Az/TngX8BZajeAU31esGH7nXTGD8Ar3lm9
+        5RPAVcAXXu7NsZ03Cfate0Jvq60Pe2ME2O23ir3HF7FOfB+4H7gwlNnh2m/u9xFw+saaZwJ43pN6SG3L
+        AFzijXvLR1LEOugN4MegPa2P3WZDlr9XgRtXWf7scTpwt9eVHrIkbMK7U8vMCnAB8LUkaolbA6whi/cD
+        xuLD3jo0vWxhHb1d/dYC4Eq7Bfz+tVdTE7ZOf+L3+24ttwxhid30wHUtqb38hSX2FrWtPasuf8sssVuG
+        /7n83eb2pZbYLYVtiX1rbFtk29ZGbCttHWVba2Ovlj+qAM62d4qAF/31GuVqLXPUApzoz/RssvzK9/3r
+        ufxNjW+0dqo+Nf8BXu+dg6ZZGHAAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="pictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAEKklEQVR4Xu2aTchWRRTHrTRbWLYoCVqE
+        BGFudFPkJshNZC3KXSAuKpE2ImafuHCjSKmVGxdCCWlClBqUblIQyvzaVUofVBBFaKIV2aL0FyfOA/P+
+        fe595s6deZ5b3B9ceLl35j/nOe/cOefM3GnTenp6enp6ekoCXAssBFYArwDvA4eAU359BOz3Z08BC6yP
+        6vynAKYDDwN7gF9ozjngbWAJcJ3qdxbgRuBZ4Cf9RS34EVgLzNLxOoNP86eB82p9Rmwmrezc6wHMA06o
+        tQU5DtyldkwEYBnwu1o4Bn4DHld7xgrwvFo1ATapXWMBeE0tmSBb1b6iAOvVgg6wTu0sgr/zXaXsmuCr
+        fdWCd8WzuU2Jl2WBH6toQ2xhLBMdPM7XhboXtE9TgGuAd1W4IRYi8+cJnuTUkcXzNo1VOIGVqtsKT29H
+        ZXh3aL8UgKUqnIDVEfnSZs/tRzHFAT5jLE8YdT0m/XI4wFgb6ibjVV1MYaMO+F4bVPCe9MvlACugpofa
+        SXhJG0MJB3wKvOQLWwoPhdpJeD0fQ6oDDkq/QZ5hGyUz/J5FoA0eapuwK9RujA8cu5mR6oBfgbnex163
+        A35/Q6jnz212WKyP5ayFVtWJxrexYkl1gGE/6kPgm+CezYDrQ03XnQ98FbQbxQLViMb352Jp44AqbK/w
+        llDXtW8GPtDGFTyp/aMBNqtaDSUcYPwA3Btqu75ljRZGL2sH4WXtGw2wT9VqKOUA4xKwPNQfADzq60gV
+        U6JMI4DDqlZDlQPeHDaNcwLcDfws9gw4pO2jAU6qWg3DHPAHMDO8XwpgjRrknNS20QBHVa2GYQ6wqTsu
+        B6xWg5yj2jYaP8GJZZgDjJ1jegWsABrGPm0fDbBD1WqockAO/gSeCPUHAI8AF7VDwHbtE41tcqhaDaUc
+        YGHwnlDb9WPDYHpV6OdysZRwQI5E6EHtHw1wu6rV0MYBFyxeA6eDe8cGxZDoNk2Fb1ONRgBfqmIFqQ6w
+        OuBO72PF0EG/vzHU8+dNi6HTqtGYBgcgqQ6oKodtD+DfY/EW5fCWUDsJYLGqVpDqgLoNkSN+CGOvQwr3
+        h9pJ+Gr7tSoPoYQD2mCldfpeQEhkOFQH/D82RQ1gdsTO0BQHpJLJAZYV3qTarQCe01GELh2MrFHd1gA3
+        AGd0pIAXtU9TMh2NfVasAAMWAX/riI6FKCue9NAz9rLD0U9UtCF/DUubs2L/aR21Q+Rb+KrwabpbR+4A
+        O9XWYliODuxVCyaIrRtX1Q1FcSd0YSa8leUMMIWgJq9aGEtiYz6jNk0E4D7gC7WwIJ8POyuYKJ4nWLI0
+        6kOKNlg2at8Ml4nzOfDdGnstvlPrW/Ctf6SRN70tidfwVkpvi6wmFdv1eR14oMhHT+MGmON7jKuAV4E3
+        gHf8sr/tnj2zNrdq/56enp6enp7s/AMvaZdnpHTBgQAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
